@@ -88,6 +88,16 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <executions>
@@ -100,7 +110,7 @@
                 </executions>
                 <configuration>
                     <argLine>
-                        <!--&#45;&#45;illegal-access=permit-->
+                        --illegal-access=permit
                     </argLine>
                     <systemPropertyVariables>
                         <env>${env}</env>
